--- a/CSS/Css_Assignment 2/Q4Calculator.html
+++ b/CSS/Css_Assignment 2/Q4Calculator.html
@@ -28,8 +28,9 @@
             font-weight: bold;
             text-align: center;
         }
-        #td{
-            border-bottom: 1px solid white;
+        td:hover{
+            border-bottom: 2px solid white;
+            border-right: 2px solid white;
         }
     </style>
 </head>
