--- a/Bootstrap/Bs_Assignment 2/snapdeal.html
+++ b/Bootstrap/Bs_Assignment 2/snapdeal.html
@@ -1,74 +1,138 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Snapdeal </title>
-        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-        <style>
-            .header{
-                background-color: #E40046;
-                width: 4000px;
-                height: 100px;
-            }
-            #head-t{
-                background-color: rgb(198, 2, 61);
-                width: 400%;
-                height: 30px;
-            }
-            .home{
-                background-color: blue;
-                width: 4000px;
-                height: 200px;
-            }
-            #side{
-                background-color: rgb(231, 214, 214);
-                width: 190px;
-                height: 680px;
-                margin: 10px;
-                border-radius: 3px;
-                font-size: 15px;
-            }
-            #side:hover{
-                background-color: thistle;
-                border-left: #E40046;
-            }
-
-        </style>
-    </head>
-    <body>
-        <div class="header">
-            <div id="head-t"></div>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Snapdeal</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="snapdeal.css">
+</head>
+<body>
+<class="container-fixed">
+    <div class="row" id="rose">
+        &emsp;&emsp;&emsp; <div class="col-2"><img src="https://www.snapdeal.com/img/icons/finalFavicon.ico" height="30" width="90">Snapdeal
         </div>
-        <div class="home">
-            <div id="side">
-                <br>
-                <p> TOP CATEGORIES</p>
-                <ul>
-                    <li><img src="" ><a href="#">Men's Fashion</a></li>
-                    <li><img src=""><a href="#">Women's Fashion</a></li>
-                    <li><img src="" ><a href="#">Home & Kitchen</a></li>
-                    <li><img src=""><a href="#">Toys, Kids' Fashion & more</a></li>
-                    <li><img src=""><a href="#">Beauty, Health & Daily Care</a></li>
-                </ul>
-                <p>MORE CATEGORIES</p>
-                <ul>
-                    <li><a href="#">Automotives</a></li>
-                    <li><a href="#">Mobile & Accessories</a></li>
-                    <li><a href="#">Electronics</a></li>
-                    <li><a href="#">Sports, Fitness & Outdoor</a></li>
-                    <li><a href="#">Computers & Gaming</a></li>
-                    <li><a href="#">Books, Media & Music</a></li>
-                    <li><a href="#">Hobbies</a></li>
-                </ul>
-                <p>TRENDING SEARCHES</p>
-                <ul>
-                    <li><a href="#">Kitchen Product</a></li>
-                    <li><a href="#">Shoes For Men</a></li>
-                    <li><a href="#">Kurti Set</a></li>
-                    <li><a href="#">Sandal Men</a></li>
-                    <li><a href="#">Sport Shoe Men</a></li>
-                </ul>
-            </div>
+        &emsp;<div class="col-2 input-group"><input type="text" class="input-group" placeholder="&emsp;&emsp;search products & brands"><button type="button" class="input-group-text btn-xs btn-success" id="button"><i class="bi bi-search"></i>Search</button></div>
+    <div class="col">
+        <button type="button" class="btn btn-link btn-lg">cart<sub><i class="bi bi-cart"></i></sub></button>
+    </div>
+    <div class="col">
+        <a style="color: white;">Sign in&emsp;<img src="" height="30" width="30"></a>
+    </div>
+    <div class="cont">
+        &emsp;&emsp;&emsp;&emsp;Brand Waali Quality,Bazaar Waali deal!       
+        <a href="" class="a">Impact@snapdeal</a>&emsp;&emsp;
+        <a href="" >Help center</a>&emsp;&emsp;
+        <a href="" >Sell on snapdeal</a>&emsp;&emsp;
+        <a href="" ><i class="bi bi-phone"></i>Download App</a>&emsp;&emsp;
+        <a href="" >Donate for elderly</a>
+    </div>
+    </div>
+<br><br><br>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col">
+            <br>
+            <h6 style="font-size: 13px;">&emsp;TOP CATEGORIES</h6>
+    <ul class="list-group">
+        <li class="list-group-item"><img src="https://n1.sdlcdn.com/imgs/k/v/x/Men_sitenavigation-b972a.jpg" class="img">&emsp;Men's Fashion</li>
+        <li class="list-group-item"><img src="https://n1.sdlcdn.com/imgs/k/v/x/WoMen_sitenav-5a8ca.jpg" class="img">&emsp;Women's Fashion</li>
+        <li class="list-group-item"><img src="https://n1.sdlcdn.com/imgs/k/v/x/HOme_sitenavigation-d7a00.jpg" class="img">&emsp;Home & Kitchen</li>
+        <li class="list-group-item"><img src="https://n4.sdlcdn.com/imgs/k/v/x/Toys_Sitenavigation-ef666.jpg" class="img">&emsp;Toys for Kid's</li>
+        <li class="list-group-item"><img src="https://n2.sdlcdn.com/imgs/k/v/x/Beauty_Site_navigation-5f3be.jpg" class="img">&emsp;Beauty, Health & daily</li>
+        &emsp;
+        <h6 style="font-size: 13px;">&emsp;MORE CATEGORIES</h6>
+        <li class="list-group-item">Automatives</li>
+        <li class="list-group-item">Mobile & Accessories</li>
+        <li class="list-group-item">Electronics</li>
+        <li class="list-group-item">Sports, Fitness & outdoor</li>
+        <li class="list-group-item">Computers & Gaming</li>
+        <li class="list-group-item">Books, Media & Music</li>
+        <li class="list-group-item">Hobbies</li>
+        &emsp;
+        <h6 style="font-size: 13px;">&emsp;TRENDING SEARCHES</h6>
+        <li class="list-group-item"><img src="https://i1.sdlcdn.com/img/faqImage/Search.png">&emsp;Kitchen Product</li>
+        <li class="list-group-item"><img src="https://i1.sdlcdn.com/img/faqImage/Search.png">&emsp;Shoes for Men</li>
+        <li class="list-group-item"><img src="https://i1.sdlcdn.com/img/faqImage/Search.png">&emsp;Kurti Set</li>
+        <li class="list-group-item"><img src="https://i1.sdlcdn.com/img/faqImage/Search.png">&emsp;Sandai Men</li>
+        <li class="list-group-item"><img src="https://i1.sdlcdn.com/img/faqImage/Search.png">&emsp;Sport Shoe Men</li>
+    </ul>
+    </div>
+</div>
+<br><br>
+    <div class="col" id="col1">
+        <img src="https://n2.sdlcdn.com/imgs/k/s/i/ethnicwear-ef4d9.jpg" alt="">
+        <button type="button" class="btn" style="color: black; width: 179px;">ONDC</button>
+        <button type="button" class="btn" style="color: black; width: 179px;">BOB Card</button>
+        <button type="button" class="btn" id="btn" style="color: black; width: 179px;">ETHNIC WEAR</button>
+        <button type="button" class="btn" style="color: black; width: 179px;">KITCHENWARE</button>
+        <button type="button" class="btn" style="color: black; width: 165px;">HOME FURNISHING</button>
+    </div>
+<br><br>
+<h5 style="margin-left: 360px;">TRENDING PRODUCTS</h5>
+<br>
+    <div class="col" id="col2">
+        <div class="one">
+            <img src="https://t1.sdlcdn.com/imgs/i/n/r/large/bhawna-collection-Loard-Shiv-Trishul-SDL890408077-1-86933.jpeg" alt="" width="220px" height="250px">
+            <p>Shiv Trishual Damru Gold-plated Locket with Rudraksha Mala</p>
+            <p>star</p>
+            <p><del>Rs 399</del> Rs 142 <button id="but3">64%OFF</button></p>
         </div>
-    </body>
+        <div class="one">
+            <img src="https://t1.sdlcdn.com/imgs/k/e/u/large/Veirdo-100-Cotton-Regular-Fit-SDL051246309-1-51a91.jpg" alt="" width="220px" height="250px">
+            <p>Veirdo-Multicolor Cotton Regular Fit Men's T-shirt</p>
+            <p>star</p>
+            <p><del>Rs 1199</del> Rs 300 <button id="but3">64%OFF</button></p>
+        </div>
+        <div class="one">
+            <img src="https://t2.sdlcdn.com/imgs/j/d/1/large/Aadi-Black-Casual-Shoes-SDL452425212-3-254be.jpeg" alt="" width="220px" height="250px">
+            <p>Aadi Black Casual Shoes</p>
+            <p>star</p>
+            <p><del>Rs 999</del> Rs 362 <button id="but3">64%OFF</button></p>
+        </div>
+        <div class="one">
+            <img src="https://t3.sdlcdn.com/imgs/i/z/j/large/bc12-606ed.jpg" alt="" width="220px" height="250px">
+            <p>Maxbell USB Reachargeable Electronic Flameless Lighter</p>
+            <p>star</p>
+            <p><del>Rs 899</del> Rs 176 <button id="but3">80%OFF</button></p>
+        </div>     
+        <div class="one">
+            <img src="https://t3.sdlcdn.com/imgs/i/u/v/large/HeelSocks1-aeb5a.jpg" alt="" width="220px" height="250px">
+            <p>Stay Healthy - Foot Protector (Free Size)</p>
+            <p>star</p>
+            <p><del>Rs 899</del> Rs 96 <button id="but3">89%OFF</button></p>
+        </div>
+        <div class="one">
+            <img src="https://t3.sdlcdn.com/imgs/h/r/s/large/Shiv-Shakti-Kavach-5-Mukhi-SDL772359305-1-3b306.jpeg" alt="" width="210px" height="240px">
+            <p>Shiv Shiv-Shakti-Kavach-5-Mukhi Rudraksha Mala</p>
+            <p>star</p>
+            <p><del>Rs 399</del> Rs 189 <button id="but3">53%OFF</button></p>
+        </div>
+    </div>
+    <div class="col" id="row">
+        <div>
+            <img src="https://i1.sdlcdn.com/img/snapdeal/barCode_Home1x.png" alt="">
+        </div>
+        &emsp;
+        <div>
+        <p><b>Enjoy Convenient<br> order Tracking</b><br> Scan to download app</p>
+        </div>
+    </div>
+</div>
+<br><br>
+<div class="container-fluid" id="cont">
+    <div>
+        <img src="https://i1.sdlcdn.com/img/appScreenshot@1x.png" height="400px" width="400px" style="margin-left: 50px;">
+    </div>
+    <div class="container">
+        <h3>Download Snapdeal<br> App Now</h3>
+        <p>Fast, Simple & Delightful.<br>All it takes is 30 seconds to Download</p>
+    </div>
+</div>
+<style>
+    
+</style>
+</body>
+</html>
